<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/coinImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="50dp"
        app:layout_constraintBottom_toTopOf="@+id/fromSymbol"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/fromSymbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:padding="3dp"
        android:textColor="@android:color/holo_purple"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/separator"
        app:layout_constraintTop_toBottomOf="@+id/coinImage"
        tools:text="BTC" />

    <TextView
        android:id="@+id/separator"
        android:layout_width="19dp"
        android:layout_height="41dp"
        android:layout_marginTop="40dp"
        android:padding="3dp"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coinImage"
        tools:text="/" />

    <TextView
        android:id="@+id/toSymbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:padding="3dp"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/separator"
        app:layout_constraintTop_toBottomOf="@+id/coinImage"
        tools:text="USD" />

    <TextView
        android:id="@+id/priceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/priceLabel"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separator" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        app:layout_constraintTop_toBottomOf="@+id/priceLabel"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/black"/>


    <TextView
        android:id="@+id/priceMinimumLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/minimumPriceLabel"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priceLabel" />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        app:layout_constraintTop_toBottomOf="@+id/priceMinimumLabel"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/black"/>

    <TextView
        android:id="@+id/priceMaximumLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/maximumPriceLabel"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priceMinimumLabel" />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        app:layout_constraintTop_toBottomOf="@+id/priceMaximumLabel"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/black"/>
    <TextView
        android:id="@+id/lastDealLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/lastDealLabel"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priceMaximumLabel" />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        app:layout_constraintTop_toBottomOf="@+id/lastDealLabel"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/black"/>
    <TextView
        android:id="@+id/updateTimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/updateTimeLabel"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastDealLabel" />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        app:layout_constraintTop_toBottomOf="@+id/updateTimeLabel"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/black"/>
    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textColor="@android:color/holo_purple"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/priceLabel"
        app:layout_constraintTop_toBottomOf="@+id/separator"
        tools:text="65000.7" />

    <TextView
        android:id="@+id/priceMinimum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textColor="@android:color/holo_red_light"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/priceMinimumLabel"
        app:layout_constraintTop_toBottomOf="@+id/price"
        tools:text="60000.23" />

    <TextView
        android:id="@+id/priceMaximum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/priceMaximumLabel"
        app:layout_constraintTop_toBottomOf="@+id/priceMinimum"
        tools:text="67080.23" />

    <TextView
        android:id="@+id/lastDeal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/lastDealLabel"
        app:layout_constraintTop_toBottomOf="@+id/priceMaximum"
        tools:text="ByBit" />

    <TextView
        android:id="@+id/updateTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/updateTimeLabel"
        app:layout_constraintTop_toBottomOf="@+id/lastDealLabel"
        tools:text="22:11:04" />

</androidx.constraintlayout.widget.ConstraintLayout>